openshift/kustomize-iag/overlays/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: iag
spec:
  host: "prod.ibm.com"
